--- a/package.json
+++ b/package.json
@@ -9,6 +9,21 @@
     "lint": "next lint",
     "test": "jest"
   },
+
+  "jest": {
+
+    "collectCoverage": true,
+
+    "testResultsProcessor": "jest-sonar-reporter",
+
+    "moduleNameMapper": {
+
+      "^.+.(css|styl|less|sass|scss|png|jpg|tff|woff|woff2)$": "jest-transform-stub"
+
+    }
+
+  },
+
   "dependencies": {
     "axios": "^1.6.5",
     "cors": "^2.8.5",
