--- a/package.json
+++ b/package.json
@@ -9,21 +9,6 @@
     "lint": "next lint",
     "test": "jest"
   },
-
-  "jest": {
-
-    "collectCoverage": true,
-
-    "testResultsProcessor": "jest-sonar-reporter",
-
-    "moduleNameMapper": {
-
-      "^.+.(css|styl|less|sass|scss|png|jpg|tff|woff|woff2)$": "jest-transform-stub"
-
-    }
-
-  },
-
   "dependencies": {
     "axios": "^1.6.5",
     "cors": "^2.8.5",
@@ -35,6 +20,10 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@types/cors": "^2.8.17",
@@ -43,10 +32,15 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-jest": "^29.7.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5"
+  },
+  "transform": {
+    "^.+\\.[t|j]sx?$": "babel-jest"
   }
 }
