--- a/package.json
+++ b/package.json
@@ -37,10 +37,8 @@
     "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5"
-  },
-  "transform": {
-    "^.+\\.[t|j]sx?$": "babel-jest"
   }
 }
