--- a/jenkinsFile
+++ b/jenkinsFile
@@ -37,7 +37,7 @@ pipeline {
             steps {
                 script {
                     sshagent(['Aamirah-ssh']) {
-                        sh 'ssh -o StrictHostKeyChecking=no ec2-user@54.91.82.93 "git pull"'
+                        sh 'ssh -o StrictHostKeyChecking=no ubuntu@54.91.82.93 "cd NextWeather && git pull"'
                     }
                 }
             }
@@ -46,7 +46,7 @@ pipeline {
             steps {
                 script {
                     sshagent(['Aamirah-ssh']) {
-                        sh 'ssh -o StrictHostKeyChecking=no ec2-user@54.91.82.93 "npm install  && sudo npm run dev -- -p 80 -H 0.0.0.0"'
+                        sh 'ssh -o StrictHostKeyChecking=no ubuntu@54.91.82.93 "cd NextWeather && cd npm install  && sudo npm run dev -- -p 80 -H 0.0.0.0"'
                     }
                 }
             }
