--- a/jenkinsFile
+++ b/jenkinsFile
@@ -46,7 +46,8 @@ pipeline {
             steps {
                 script {
                     sshagent(['Aamirah-ssh']) {
-                        sh 'ssh -o StrictHostKeyChecking=no ubuntu@54.91.82.93 "cd NextWeather && cd npm install  && sudo npm run dev -- -p 80 -H 0.0.0.0"'
+                        sh 'ssh -o StrictHostKeyChecking=no ubuntu@54.91.82.93 "cd NextWeather && npm install && sudo npm run dev -- -p 80 -H 0.0.0.0"
+'
                     }
                 }
             }
