--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,3 +11,10 @@ sonar.organization=aamirahp
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+sonar.sources=./src, 
+sonar.exclusions=**/test/*.js
+sonar.language=ts
+sonar.tests=./test
+ 
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.testExecutionReportPaths=./test-report.xml
