--- a/jenkinsFile
+++ b/jenkinsFile
@@ -41,16 +41,16 @@ pipeline {
                 }
             }
         }
-        // stage('Start NextJS app') {
-        //     steps {
-        //         script {
-        //             sshagent(['Aamirah-ssh']) {
-        //                 sh 'ssh -o StrictHostKeyChecking=no ubuntu@54.91.82.93 "cd NextWeather && npm install && sudo npm run dev -- -p 80 -H 0.0.0.0"'
+        stage('Start NextJS app') {
+            steps {
+                script {
+                    sshagent(['Aamirah-ssh']) {
+                        sh 'ssh -o StrictHostKeyChecking=no ubuntu@54.91.82.93 "cd NextWeather && npm install && sudo npm run dev -- -p 80 -H 0.0.0.0"'
 
-        //             }
-        //         }
-        //     }
-        // }
+                    }
+                }
+            }
+        }
         
         
     }
