--- a/jenkinsFile
+++ b/jenkinsFile
@@ -32,7 +32,7 @@ pipeline {
             }
         }
         
-        stage('Pull Repository') {
+        stage('Git Pull Repository') {
             steps {
                 script {
                     sshagent(['Aamirah-ssh']) {
