--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,5 +9,14 @@ sonar.organization=aamirahp
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
 
-# Encoding of the source code. Default is default system encoding 
+# Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+sonar.sources=./__tests__
+sonar.exclusions=**/test/*.js
+sonar.language=js
+sonar.tests=./__tests__
+ 
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.testExecutionReportPaths=./test-report.xml
+
+
