--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.organization=aamirahp
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
-sonar.sources=./__tests__
+sonar.sources=__tests__
 sonar.exclusions=**/test/*.js
 sonar.language=js
 sonar.tests=./__tests__
