--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.organization=aamirahp
 #sonar.sourceEncoding=UTF-8
 sonar.sources=__tests__
 sonar.exclusions=**/test/*.js
-sonar.language=js
+sonar.language=ts
 sonar.tests=./__tests__
  
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
