--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.organization=aamirahp
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
-sonar.language=ts
+sonar.language=js
 sonar.tests=./__tests__
  
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
