--- a/package.json
+++ b/package.json
@@ -40,7 +40,16 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
+    "jest-json-reporter": "^1.2.2",
+    "jest-junit": "^16.0.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5"
+  },
+  "jest": {
+    "reporters": [
+      "default",
+      ["jest-junit", { "outputDirectory": "test-results" }]
+    ]
   }
+  
 }
