--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,9 +12,8 @@ sonar.organization=aamirahp
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 sonar.language=js
+sonar.exclusions=**/node_modules/**
 sonar.tests=./__tests__
  
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.testExecutionReportPaths=./test-report.xml
-
-
